tests/baselines/reference/nullishCoalescingOperator_not_strict.errors.txt
nullishCoalescingOperator_not_strict.ts(12,7): error TS2856: The type of this declaration is ambiguous and may be observed as either 'string' or '"literal" | "whatever"'.
nullishCoalescingOperator_not_strict.ts(13,7): error TS2856: The type of this declaration is ambiguous and may be observed as either 'string' or '"" | "whatever"'.
nullishCoalescingOperator_not_strict.ts(14,7): error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | 1' or '1 | "whatever"'.
nullishCoalescingOperator_not_strict.ts(15,7): error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | 0' or '0 | "whatever"'.
nullishCoalescingOperator_not_strict.ts(16,7): error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | true' or 'true | "whatever"'.
nullishCoalescingOperator_not_strict.ts(17,7): error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | false' or 'false | "whatever"'.


==== nullishCoalescingOperator_not_strict.ts (6 errors) ====
    declare const a1: 'literal' | undefined | null
    declare const a2: '' | undefined | null
    declare const a3: 1 | undefined | null
    declare const a4: 0 | undefined | null
    declare const a5: true | undefined | null
    declare const a6: false | undefined | null
    declare const a7: unknown | null
    declare const a8: never | null
    declare const a9: any | null
    
    
    const aa1 = a1 ?? 'whatever'
          ~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'string' or '"literal" | "whatever"'.
    const aa2 = a2 ?? 'whatever'
          ~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'string' or '"" | "whatever"'.
    const aa3 = a3 ?? 'whatever'
          ~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | 1' or '1 | "whatever"'.
    const aa4 = a4 ?? 'whatever'
          ~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | 0' or '0 | "whatever"'.
    const aa5 = a5 ?? 'whatever'
          ~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | true' or 'true | "whatever"'.
    const aa6 = a6 ?? 'whatever'
          ~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | false' or 'false | "whatever"'.
    const aa7 = a7 ?? 'whatever'
    const aa8 = a8 ?? 'whatever'
    const aa9 = a9 ?? 'whatever'